--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anchor</title>
-    <link rel="stylesheet" type="text/css" href="css\home.css" />
+    <title>Anchor</title> 
+    <link rel="stylesheet" type="text/css" href="/AnchorWebsite/public/css/home.css" />
 </head>
 <body>
     <nav class="navbar"></nav>
-    <script src="js/nav.js"></script>
+    <script src="/AnchorWebsite/public/js/nav.js"></script>
     
     <!-- hero section -->
     <header class="hero-section">
@@ -22,7 +22,7 @@
     <div class="product-container">
         <div class="product-card">
             <div class="product-image">
-                <img src="img/design1-1.jpg" class="product-thumb" alt="">
+                <img src="/AnchorWebsite/public/img/design1-1.jpg" class="product-thumb" alt="">
                 <button class="card-btn">add to whislist</button>
             </div>
             <div class="product-info">
@@ -36,7 +36,7 @@
         <div class="product-card">
             <div class="product-image">
                 <span class="discount-tag">50% off</span>
-                <img src="img/design2-4-3.webp" class="product-thumb" alt="">
+                <img src="/AnchorWebsite/public/img/design2-4-3.webp" class="product-thumb" alt="">
                 <button class="card-btn">add to whislist</button>
             </div>
             <div class="product-info">
