Finished product page and finished galery page

--- a/galery.html
+++ b/galery.html
@@ -3,21 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anchor</title> 
+    <title>Galery</title>
     <link rel="stylesheet" type="text/css" href="/AnchorWebsite/public/css/home.css" />
+    <link rel="stylesheet" type="text/css" href="/AnchorWebsite/public/css/galery.css" />
 </head>
 <body>
     <nav class="navbar"></nav>
-    
-    <!-- hero section -->
-    <header class="hero-section">
-    <div class="content">
-
-        <p class="sub-heading">Anchor Apparel designs and produces graphic t-shirts for pop culture fans of all ages. All graphic t-shirts are produced in house using laserjet printing onto transfer paper that is heat transferred directly onto the garments. Every graphic t-shirt is produced using quality materials to ensure maximum comfort and lifespan for each customer.</p>
-    </div>
-</header>
-<section class="product">
-    <h2 class="product-category">Best selling</h2>
+    <footer></footer>
+    <section class="search-results">
+        <h2 class="heading">Search results for <span>Product</span></h2>
+    </section>
     <div class="product-container">
         <div class="product-card">
             <div class="product-image">
@@ -44,7 +39,6 @@
                 <span class="price">$20</span><span class="actual-price">$40</span>
             </div>
         </div>
-</section>
-<script src="/AnchorWebsite/public/js/nav.js"></script>
+    <script src="/AnchorWebsite/public/js/nav.js"></script>
 </body>
 </html>
